feat: opt-in fill of manual selections up to 16 pages
